renamed docword variable to DTM throughout

--- a/doc-clustering-topic-modeling.ipynb
+++ b/doc-clustering-topic-modeling.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "import csv\n",
@@ -26,14 +30,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Read and format data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Read vocabulary file"
    ]
@@ -41,17 +51,26 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "def read_vocab(vocab_file_name):\n",
+    "    '''Reads vocabulary file into a list'''\n",
     "    return [w.strip() for w in open(vocab_file_name)]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "vocab = read_vocab('vocab.kos.txt')"
@@ -59,7 +78,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Read docword.txt into a document x word matrix"
    ]
@@ -67,10 +89,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "def read_docword(file_name):\n",
+    "    '''\n",
+    "    Reads docword txt file into a Document-Term Matrix (DTM)\n",
+    "    The full DTM will be too large to hold in memory if represented    as a dense matrix. Use Scipy sparse instead\n",
+    "    Matrix multiplication involving the sparse representation is rapid thanks to algorithms that avoid explicitly\n",
+    "    performing multiplications by 0 (nNMF or SVD for instance involve matrix multiplication)\n",
+    "    '''\n",
     "\n",
     "    file_handle = open(file_name)\n",
     "    reader = csv.reader(file_handle, delimiter=' ')\n",
@@ -78,7 +110,7 @@
     "    W = int(next(reader)[0])\n",
     "    N = int(next(reader)[0])\n",
     "\n",
-    "    #create DxW numpy matrix\n",
+    "    #create numpy DTM (Document-Term Matrix)\n",
     "    m = np.empty(shape=[D,W], dtype='int8')\n",
     "    #instead of creating a sparse matrix and then fill it up, create a numpy matrix\n",
     "    #and then later convert it to csr -> SparseEfficiencyWarning\n",
@@ -98,22 +130,32 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
-    "D,W,N,docword = read_docword('docword.kos.txt')"
+    "D,W,N,DTM = read_docword('docword.kos.txt')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "##  TF-IDF: term frequency inverse document frequency"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "TFIDF is a more reliable metric than plain frequency because it normalizes frequency across documents.  Very common (and semantically meaningless) words like articles ('the', 'a', 'an' ...), prepositions, etc... are in this way given less weight and filtered out "
    ]
@@ -121,23 +163,33 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "tfidf_transformer = TfidfTransformer()\n",
-    "docword_tfidf = tfidf_transformer.fit_transform(docword)"
+    "DTM_tfidf = tfidf_transformer.fit_transform(DTM)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Document Clustering and Topic Modeling"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now comes the interesting part  \n",
     "\n",
@@ -160,7 +212,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Initialize K-Means object"
    ]
@@ -168,7 +223,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "k = 10\n",
@@ -188,7 +247,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Compute KMeans on the TFIDF matrix"
    ]
@@ -196,7 +258,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -208,13 +274,16 @@
     }
    ],
    "source": [
-    "%time km.fit(docword_tfidf)\n",
+    "%time km.fit(DTM_tfidf)\n",
     "clusters = km.labels_"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Sort cluster centers by proximity to centroid"
    ]
@@ -222,7 +291,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "k_centers = km.cluster_centers_ #Coordinates of cluster centers\n",
@@ -231,7 +304,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Print Cluster index and n words (closest to centroid) associated"
    ]
@@ -239,7 +315,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -278,7 +358,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Try to find  optimal number of clusters for k-means. \"Elbow\" method"
    ]
@@ -286,7 +369,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -311,11 +398,12 @@
    ],
    "source": [
     "k_range = range(2,20)\n",
-    "kms = [KMeans(n_clusters=k, init='k-means++').fit(docword_tfidf) for k in k_range]\n",
+    "kms = [KMeans(n_clusters=k, init='k-means++').fit(DTM_tfidf) for k in k_range]\n",
     "centroids = [X.cluster_centers_ for X in kms]\n",
     "labels = [km.labels_ for km in kms]\n",
     "#calculate Euclidean distance from each point to cluster center\n",
-    "k_euclid = [scdist.cdist(docword_tfidf.todense(), c, 'euclidean') for c in centroids]\n",
+    "k_euclid = [scdist.cdist(DTM_tfidf.todense(), c, 'euclidean') for c in centroids]\n",
+    "#Note converting DTM_tfidf to dense format here might be a bad idea, it requires much more memory\n",
     "dist = [np.min(ke, axis=1) for ke in k_euclid]\n",
     "#Total within cluster sum of squares\n",
     "wcss = [sum(d**2) for d in dist]\n",
@@ -334,7 +422,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Not very clear elbow? Check out the Silhouette scores"
    ]
@@ -342,7 +433,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -359,7 +454,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Silhouette Coefficients range between [-1,1]. Values near +1 indicate that the sample is far away from the neighboring clusters. A value of 0 indicates that the sample is on or very close to the decision boundary between two neighboring clusters and negative values indicate that those samples might have been assigned to the wrong cluster.  \n",
     "These values are not good, but this measure seems to suffer from the phenomenon called “Concentration of Measure” or “Curse of Dimensionality\"   \n",
@@ -368,7 +466,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Hierarchical clustering  "
    ]
@@ -376,7 +477,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -426,14 +531,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Dimensionality Reduction and Plot"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### TSNE\n",
     "t-SNE is a machine learning technique for dimensionality reduction that helps you to identify relevant patterns.  The main advantage of t-SNE is the ability to preserve local structure. This means, roughly, that points which are close to one another in the high-dimensional data set will tend to be close to one another in the chart. t-SNE also produces beautiful looking visualizations."
@@ -442,7 +553,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "tsne_cos = TSNE(n_components=2, \n",
@@ -456,7 +571,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -484,7 +603,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "def scatter(x, labels):\n",
@@ -512,7 +635,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -532,7 +659,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   }
@@ -553,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
