added the LSA/SVD part before KMeans, created some new plots, updated presentation

--- a/doc-clustering-topic-modeling.ipynb
+++ b/doc-clustering-topic-modeling.ipynb
@@ -18,10 +18,13 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.manifold import TSNE\n",
     "from sklearn.cluster import KMeans\n",
-    "import matplotlib.patches as mpatches\n",
     "import scipy.cluster.hierarchy as sch\n",
+    "import matplotlib.patches as mpatches\n",
     "import scipy.spatial.distance as scdist\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import Normalizer\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.decomposition import TruncatedSVD\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.feature_extraction.text import TfidfTransformer\n",
     "from sklearn.metrics import silhouette_score, silhouette_samples\n",
@@ -61,19 +64,6 @@
     "def read_vocab(vocab_file_name):\n",
     "    '''Reads vocabulary file into a list'''\n",
     "    return [w.strip() for w in open(vocab_file_name)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "vocab = read_vocab('vocab.kos.txt')"
    ]
   },
   {
@@ -137,7 +127,20 @@
    },
    "outputs": [],
    "source": [
-    "D,W,N,DTM = read_docword('docword.kos.txt')"
+    "docword_file = 'data/docword.kos.txt'\n",
+    "D,W,N,DTM = read_docword(docword_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "vocab_file = 'data/vocab.kos.txt'\n",
+    "vocab = read_vocab(vocab_file)"
    ]
   },
   {
@@ -207,7 +210,53 @@
     "If a good candidate for k is found K-Means can be re-run using it as input. In addition, several K-Means runs are advised since the algorithm might end up in a local optima.   \n",
     "\n",
     "Another approach would be to use a different clustering algorithm not requiring a predefined number of clusters:\n",
-    "Means-shift, for instance "
+    "Means-shift, for instance . But this has not provided good results in this scenario (1 or 2 big groups)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVD/LSA  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TruncatedSVD implements a variant of singular value decomposition (SVD) that only computes the k largest singular values, \n",
+    "where k is a user-specified parameter.  \n",
+    "\n",
+    "When truncated SVD is applied to term-document matrices (as returned by CountVectorizer or TfidfVectorizer), this transformation is known as latent semantic analysis (LSA), because it transforms such matrices to a “semantic” space of low dimensionality.   \n",
+    "\n",
+    "In particular, LSA is known to combat the effects of synonymy and polysemy (both of which roughly mean there are multiple meanings per word), which cause term-document matrices to be overly sparse and exhibit poor similarity under measures such as cosine similarity.  \n",
+    "\n",
+    "TruncatedSVD transformer accepts scipy.sparse matrices without the need to densify them, as densifying may fill up memory even for medium-sized document collections.  \n",
+    "\n",
+    "The appropriate value of s is a matter of debate, and is application-dependent. Smaller values of s represent a greater extent of dimensionality reduction at the cost of a loss of structure of the original DTM. Values anywhere from 30 to 300 are commonly used.   \n",
+    "In practice, using a cumulative scree plot to select s so that roughly 75–80% of the original variance is recovered tends to strike a good balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n_components = W/10\n",
+    "\n",
+    "svd = TruncatedSVD(n_components)\n",
+    "# DTM_tfidf results are normalized. Since LSA/SVD results are\n",
+    "# not normalized, we have to redo the normalization:\n",
+    "normalizer = Normalizer(copy=False)\n",
+    "lsa = make_pipeline(svd, normalizer)\n",
+    "\n",
+    "%time \\\n",
+    "DTM_tfidf_lsa = lsa.fit_transform(DTM_tfidf)\n",
+    "\n",
+    "print(\"Explained variance of the SVD step: {}%\".format(int(svd.explained_variance_ratio_.sum() * 100)))"
    ]
   },
   {
@@ -217,7 +266,19 @@
     "editable": true
    },
    "source": [
-    "## Initialize K-Means object"
+    "## K-Means"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "K-Means separates samples in n groups of equal variance  \n",
+    "first step chooses the initial centroids (k, the number of clusters)  \n",
+    "After initialization, K-means consists of looping between the two other steps:  \n",
+    "The first step assigns each sample to its nearest centroid.  \n",
+    "The second step creates new centroids by taking the mean value of all of the samples assigned to each previous centroid\n",
+    "The inertia or within-cluster sum-of-squares is minimized"
    ]
   },
   {
@@ -230,8 +291,8 @@
    },
    "outputs": [],
    "source": [
-    "k = 10\n",
-    "#these are all default options (except for k=20)\n",
+    "k = 20\n",
+    "#these are all default options (except for k)\n",
     "km = KMeans(algorithm='auto',\n",
     "            copy_x=True,\n",
     "            init='k-means++',\n",
@@ -274,7 +335,7 @@
     }
    ],
    "source": [
-    "%time km.fit(DTM_tfidf)\n",
+    "%time km.fit(DTM_tfidf_lsa)\n",
     "clusters = km.labels_"
    ]
   },
@@ -285,7 +346,7 @@
     "editable": true
    },
    "source": [
-    "### Sort cluster centers by proximity to centroid"
+    "#### Sort cluster centers by proximity to centroid"
    ]
   },
   {
@@ -298,8 +359,9 @@
    },
    "outputs": [],
    "source": [
-    "k_centers = km.cluster_centers_ #Coordinates of cluster centers\n",
-    "ordered_k_centers_idxs = k_centers.argsort()[:, ::-1] #argsort returns the indices that would sort an array"
+    "k_centers = km.cluster_centers_ #Coordinates of cluster centers  [n_clusters, n_features]\n",
+    "original_space_centroids = svd.inverse_transform(k_centers)\n",
+    "order_centroids = original_space_centroids.argsort()[:, ::-1] #argsort returns the indices that would sort an array"
    ]
   },
   {
@@ -309,7 +371,7 @@
     "editable": true
    },
    "source": [
-    "### Print Cluster index and n words (closest to centroid) associated"
+    "#### Print Cluster index and n words (closest to centroid) associated"
    ]
   },
   {
@@ -349,10 +411,10 @@
     }
    ],
    "source": [
-    "cluster_topics = {}\n",
+    "lsa_cluster_topics = {}\n",
     "for c in range(k):\n",
-    "    topic = ','.join([vocab[i] for i in [ix for ix in ordered_k_centers_idxs[c, :5]]])\n",
-    "    cluster_topics[c] = topic\n",
+    "    topic = ','.join([vocab[i] for i in [ix for ix in order_centroids[c, :5]]])\n",
+    "    lsa_cluster_topics[c] = topic\n",
     "    print \"Cluster %i: \" % c + topic"
    ]
   },
@@ -364,6 +426,14 @@
    },
    "source": [
     "### Try to find  optimal number of clusters for k-means. \"Elbow\" method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This takes forever without dim red. Use DTM_tfidf_lsa instead of DTM_tfidf\n",
+    "Note also that DTM_tfdif_lsa, unlike DTM_tfidf, is not sparse anymore. No need to convert to dense format!"
    ]
   },
   {
@@ -397,27 +467,26 @@
     }
    ],
    "source": [
-    "k_range = range(2,20)\n",
-    "kms = [KMeans(n_clusters=k, init='k-means++').fit(DTM_tfidf) for k in k_range]\n",
+    "k_range = range(2,100)\n",
+    "kms = [KMeans(n_clusters=k, init='k-means++').fit(DTM_tfidf_lsa) for k in k_range]\n",
     "centroids = [X.cluster_centers_ for X in kms]\n",
     "labels = [km.labels_ for km in kms]\n",
     "#calculate Euclidean distance from each point to cluster center\n",
-    "k_euclid = [scdist.cdist(DTM_tfidf.todense(), c, 'euclidean') for c in centroids]\n",
-    "#Note converting DTM_tfidf to dense format here might be a bad idea, it requires much more memory\n",
+    "k_euclid = [scdist.cdist(DTM_tfidf_lsa, c, 'euclidean') for c in centroids] \n",
     "dist = [np.min(ke, axis=1) for ke in k_euclid]\n",
     "#Total within cluster sum of squares\n",
     "wcss = [sum(d**2) for d in dist]\n",
     "#average wcss\n",
     "avwcss = [(sum(d**2))/len(d) for d in dist]\n",
     "#total sum of squares\n",
-    "tss = sum(scdist.pdist(docword_tfidf.todense())**2)/docword_tfidf.shape[0]\n",
+    "tss = sum(scdist.pdist(DTM_tfidf_lsa)**2)/DTM_tfidf_lsa.shape[0]\n",
     "#between cluster sum of squares:\n",
     "bss = tss - wcss\n",
     "#plot average wcss vs number of clusters \"Elbow plot\": look for a point where the rate of decrease in wcss sharply shifts\n",
-    "plt.subplots(figsize=(18, 12))\n",
+    "plt.subplots(figsize=(18, 12)) # set size\n",
     "plt.plot(k_range, avwcss, '-o')\n",
     "plt.ylabel(\"average wcss\")\n",
-    "plt.xlabel(\"k\")\n"
+    "plt.xlabel(\"k\")"
    ]
   },
   {
@@ -495,38 +564,25 @@
     }
    ],
    "source": [
-    "#Compute distance matrix . Cosine is a good metric\n",
-    "#Pairwise distances between observations in n-dimensional space.\n",
-    "#Option 1 is sklearn.metrics.pairwais cosine_similarity\n",
-    "dist = 1 - cosine_similarity(docword_tfidf)\n",
-    "\n",
-    "#Option 2 is scipy.spatial.distance (can't take csr_matrix as input and is slower)\n",
-    "D = scdist.pdist(docword_tfidf.todense(), metric='cosine')\n",
-    "D = scdist.squareform(D)\n",
+    "#sklearn.metrics.pairwise cosine_similarity\n",
+    "dist = 1 - cosine_similarity(DTM_tfidf_lsa)\n",
     "\n",
     "#Then get linkage matrix\n",
-    "#Option 1 define the linkage_matrix using ward clustering pre-computed distances\n",
     "linkage_matrix_ward = sch.ward(dist) \n",
     "\n",
-    "#Option 2 \n",
-    "linkage_matrix_complete = sch.linkage(dist, method='complete')#, metric='cosine')\n",
-    "\n",
     "#And then plot the dendrogram\n",
-    "\n",
-    "dendro_color_threshold = 0.1 #default: 0.7\n",
-    "\n",
+    "dendro_color_threshold = 0.3 #default: 0.7\n",
     "fig, ax = plt.subplots(figsize=(15, 20)) # set size\n",
     "ax = sch.dendrogram(linkage_matrix_ward, orientation=\"left\",color_threshold=dendro_color_threshold*max(linkage_matrix_ward[:,2]));\n",
-    "\n",
     "plt.tick_params(\\\n",
     "    axis= 'x',          # changes apply to the x-axis\n",
     "    which='both',      # both major and minor ticks are affected\n",
     "    bottom='off',      # ticks along the bottom edge are off\n",
     "    top='off',         # ticks along the top edge are off\n",
     "    labelbottom='off')\n",
-    "\n",
+    "plt.title(docword_file + \"\\n\" + \"Dendrogram color threshold: %s\"%dendro_color_threshold)\n",
     "plt.tight_layout() #show plot with tight layout\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -595,9 +651,9 @@
     }
    ],
    "source": [
-    "dist = 1 - cosine_similarity(docword_tfidf)\n",
+    "dist = 1 - cosine_similarity(docword_tfidf_lsa)\n",
     "\n",
-    "tsne_cos_coords = tsne_cos.fit_transform(dist)\n"
+    "tsne_cos_coords = tsne_cos.fit_transform(dist)"
    ]
   },
   {
@@ -610,7 +666,7 @@
    },
    "outputs": [],
    "source": [
-    "def scatter(x, labels):\n",
+    "def scatter(x, labels, cluster_topics):\n",
     "    n_labels = len(set(labels))\n",
     "    palette = np.array(sb.color_palette(\"hls\", n_labels )) # color palette with seaborn.\n",
     "    f = plt.figure(figsize=(18, 12))\n",
@@ -629,6 +685,7 @@
     "        txts.append(txt)\n",
     "    plt.legend(handles=color_patches, bbox_to_anchor=(1.04,1), loc=\"upper left\")\n",
     "    plt.subplots_adjust(right=0.60)\n",
+    "    plt.title(docword_file + \"\\n\" + \"k = %s\" %len(set(km.labels_)))\n",
     "    plt.show()"
    ]
   },
@@ -653,7 +710,7 @@
     }
    ],
    "source": [
-    "scatter(tsne_cos_coords, km.labels_)"
+    "scatter(tsne_cos_coords, km.labels_, lsa_cluster_topics)"
    ]
   },
   {
