Added things and stuff

--- a/doc-clustering-topic-modeling.ipynb
+++ b/doc-clustering-topic-modeling.ipynb
@@ -27,7 +27,7 @@
     "from IPython.display import display, HTML\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import Normalizer\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
+    "#from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.decomposition import TruncatedSVD\n",
     "sb.set_style(\"whitegrid\", {'axes.grid' : False})\n",
     "import statsmodels.sandbox.stats.multicomp as mc\n",
