things and stuff

--- a/doc-clustering-topic-modeling.ipynb
+++ b/doc-clustering-topic-modeling.ipynb
@@ -16,6 +16,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sb\n",
+    "from irlb import irlb\n",
     "from scipy import stats\n",
     "from scipy import sparse\n",
     "import matplotlib.pyplot as plt\n",
@@ -110,7 +111,10 @@
     "    #instead of creating a sparse matrix and then fill it up, create a numpy matrix\n",
     "    #and then later convert it to csr -> SparseEfficiencyWarning\n",
     "    #m = sparse.csr_matrix( (D,W), dtype='int8')\n",
-    "\n",
+    "    '''\n",
+    "    Note: this is not an efficient way to fill in the matrix. \n",
+    "    TO DO: Create first the array for each document and then fill the whole array at once\n",
+    "    '''    \n",
     "    for row in reader:\n",
     "        D_i = int(row[0])-1\n",
     "        W_i = int(row[1])-1\n",
@@ -599,7 +603,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Term enrichment analysis"
    ]
@@ -608,7 +615,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -640,7 +649,9 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -784,7 +795,9 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
